edit test.html content

--- a/test.html
+++ b/test.html
@@ -7,6 +7,29 @@
     <title>Document</title>
 </head>
 <body>
+    <span>step1:</span>
+    <p>本機端先建立專案資料夾</p>
+    <span>step2:</span>
+    <p>git init 初始化專案資料夾</p>
+    <span>step3:</span>
+    <p>在專案資料夾，建立新檔案</p>
+    <span>step4:</span>
+    <p>git add . 將檔案加入工作階段?</p>
+    <span>step5:</span>
+    <p>git commit -m "firstcmmit"  將檔案第一次commit至本機git</p>
+    <span>step6:</span>
+    <p>在github建立新的repository</p>
+    <span>step7:</span>
+    <p>git remote add origin https://github.com/master名稱/repository名稱.git</p>
+    <span>step8:</span>
+    <p>git push -u origin master 將本機端已commit的檔案狀態 push到github</p>
     
+git init
+git add README.md
+git commit -m "first commit"
+git remote add origin https://github.com/briansu53/JavaScript_Basic_Day2.git
+git push -u origin master
+    
+
 </body>
 </html>
